--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         .then(response => response.json())
         .then(result => {
             if (result.success) {
+                console.log(result.success);
                 console.log("postgres connect");
             }
             else {
+                console.log(result.success);
                 console.log("postgres not connect");
             }
         })
