--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 console.log("postgres not connect");
             }
         })
+        .catch(err => {
+            console.log(err);
+        });
     }
 
     const elasticTest = () => {
