--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 "Content-Type": "application/json"
             },
             body: JSON.stringify({
+                "something": something
             })
         })
         .then(response => response.json())
