--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 "Content-Type": "application/json"
             },
             body: JSON.stringify({
-                "something": something
+                "something": "something"
             })
         })
         .then(response => response.json())
