UPDATE : index.html edit function4

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     const elasticTest = () => {
         fetch("/test/elastic", {
-            method: "PUT",
+            method: "POST",
             headers: {
                 "Content-Type": "application/json"
             },
