UPDATE: connectTest.js edit elastic connect test 2

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             }
             else {
                 console.log("elastic not connect");
+                console.log(result);
             }
         })
     }
